fixed header overlap

--- a/src/components/css/header-bar.css
+++ b/src/components/css/header-bar.css
@@ -21,6 +21,7 @@ text-decoration: none;
 	font-weight: 100;
 	margin: 0 auto;
 	text-transform: lowercase;
+	padding-left: 20px;
 }
 
 
